--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ html, body, #__next {
   height: 100%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #ffffff;
   color: var(--almost-black);
